# WhatsRusty

./: Cargo.toml  README.md  build.rs
proto/: whatsapp.proto
proto/extractor/: index.js
src/: client.rs  constant.rs  device.rs  main.rs  request.rs
src/proto/: whatsapp.rs
src/socket/: frame_socket.rs  mod.rs  noise_socket.rs
src/type/: jid.rs
src/types/: mod.rs
src/util/: binary.rs  gcm.rs  handler.rs  key.rs  mod.rs  noise_hand_shake.rs  token.rs  xml.rs
src/utils/: decoder.rs  encoder.rs  handler.rs  key.rs  mod.rs  noise_handshake.rs  token.rs  xml.rs
