[package]
name = "WhatsRusty"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.88"
base64 = "0.22.1"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
ezsockets = { version = "0.7.0", features = ["client", "rustls"] }
hkdf = "0.12.4"
prost = "0.13.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.13.1"
