[package]
name = "whatsrusty"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
futures-util = "0.3.31"
hkdf = "0.12.4"
md5 = "0.7.0"
prost = "0.13.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"]}
x25519-dalek = { version = "2.0.1", features = ["static_secrets"]}
paris = { version = "1.5", features = ["timestamps", "macros", "no_logger"] }
byteorder = "1.5.0"
flate2 = "1.1.1"
hex = "0.4.3"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.13.1"
